          David Fogel.
        - Implemented Variant#equals() method and improved the 
          implementation of isCompatible() method.
        - Moved static methods of LinkReference to Link. Removed the
          LinkReference class.
        - Added ClientResource#getParent() to return the parent 
          resource based on the URI hierarchy.
        - Added org.restlet.util.Couple generic class to store two
          related objects. Inspired by Tim Peierls's Relation idea.
     - Misc
        - Exceptions thrown in the internal HTTP client are not logged
          with a FINE level instead of a WARNING level.
        - Upgraded Simple to version 4.1.13 which now supports 
          programmatic shutdown. Contributed by Niall Gallagher.
          
- 2.0 Milestone 3 (2009-05-27)
    - Breaking changes
        - Deprecated ServletConverter and added an equivalent 
          ServletAdapter class to prevent confusion with the 
          ConverterService reintroduced in Restlet 1.2. 
        - Moved all XML, DOM, SAX and XSLT related classes from the core 
          Restlet API to a new "org.restlet.ext.xml" package. This was
          need to keep a uniform API with the new Android port.
    - Bugs fixed
        - Fixed bug with a ServerResource when an annotated method does 
          not return a value.
        - Fixed dependency issue in the org.restlet.example.pom. 
          Reported by Marcelo Ochoa.
        - ServerServlet ignores client connectors that are now available.
        - Fixed issue with annotation inheritance. 
          Contributed by Tal Liron.
        - Fixed bug causing Engine to be instantiated several time.
          Reported by David Fogel. 
        - Fixed potential issue in Engine classloading logic which used
          Class.class instead of Engine.class to get the class's 
          classloader. Reported by David Fogel.
        - Fixed conversion issues with edge cases.